[tool.poetry]
name = "research-paper-fetcher"
version = "0.1.0"
description = "A tool to fetch research papers from PubMed with pharmaceutical/biotech affiliations"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
flake8 = "^6.0.0"
black = "^23.7.0"

[tool.poetry.scripts]
get-papers-list = "research_paper_fetcher.get_papers_list:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
